syntax = "proto3";

package yandex.cloud.video.v1;

import "google/protobuf/field_mask.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/operation/operation.proto";
import "yandex/cloud/video/v1/channel.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/video/v1;video";
option java_package = "yandex.cloud.api.video.v1";

// Channel management service.
service ChannelService {
  // Returns the specific channel.
  rpc Get(GetChannelRequest) returns (Channel) {}

  // List channels for organization.
  rpc List(ListChannelsRequest) returns (ListChannelsResponse) {}

  // Create channel.
  rpc Create(CreateChannelRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "CreateChannelMetadata"
      response: "Channel"
    };
  }

  // Update channel.
  rpc Update(UpdateChannelRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateChannelMetadata"
      response: "Channel"
    };
  }

  // Delete channel.
  rpc Delete(DeleteChannelRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteChannelMetadata"
      response: "google.protobuf.Empty"
    };
  }
}

message GetChannelRequest {
  // ID of the channel.
  string channel_id = 1;
}

message ListChannelsRequest {
  reserved 2 to 99;
  // ID of the organization.
  string organization_id = 1;

  // The maximum number of the results per page to return. Default value: 100.
  int64 page_size = 100;
  // Page token for getting the next page of the result.
  string page_token = 101;

  // By which column the listing should be ordered and in which direction,
  // format is "createdAt desc". "id asc" if omitted.
  // Possible fields: ["id", "createdAt", "updatedAt"]
  // Both snake_case and camelCase are supported for fields.
  string order_by = 102;

  // Filter expression that filters resources listed in the response.
  // Expressions are composed of terms connected by logic operators.
  // Value in quotes: `'` or `"`
  // Example: "key1='value' AND key2='value'"
  // Supported operators: ["AND"].
  // Supported fields: ["title"]
  // Both snake_case and camelCase are supported for fields.
  string filter = 103;
}

message ListChannelsResponse {
  reserved 2 to 99;
  // List of channels for specific organization.
  repeated Channel channels = 1;

  // Token for getting the next page.
  string next_page_token = 100;
}

message CreateChannelRequest {
  reserved 4 to 199;
  // ID of the organization.
  string organization_id = 1;

  // Channel title.
  string title = 2;
  // Channel description.
  string description = 3;

  // Custom labels as `` key:value `` pairs. Maximum 64 per resource.
  map<string, string> labels = 200;
}

message CreateChannelMetadata {
  // ID of the channel.
  string channel_id = 1;
}

message UpdateChannelRequest {
  reserved 5 to 199;
  // ID of the channel.
  string channel_id = 1;
  // Field mask that specifies which fields of the channel are going to be updated.
  google.protobuf.FieldMask field_mask = 2;

  // Channel title.
  string title = 3;
  // Channel description.
  string description = 4;

  // Custom labels as `` key:value `` pairs. Maximum 64 per resource.
  map<string, string> labels = 200;
}

message UpdateChannelMetadata {
  // ID of the channel.
  string channel_id = 1;
}

message DeleteChannelRequest {
  // ID of the channel.
  string channel_id = 1;
}

message DeleteChannelMetadata {
  // ID of the channel.
  string channel_id = 1;
}
